# Memoria

./: .gitignore  README.md
backend/: .env.example  .gitignore  README.md  SETUP_POSTGRES.md  directory_tree.txt  docker-compose.yml  pyproject.toml  requirements.txt
backend/.github/prompts/: pg_sqlalchemy_prompt.prompt.md  project.prompt.md
backend/milvus/readmes/: GraphEmbeddings_collection.md  ReasoningBank_collection.md
backend/milvus/scripts_with_data/: graphembedding_filler.py  reasoning_filler.py
backend/neo4j/scripts_with_data/: neo4jHelpers.py
backend/neo4j_db/scripts_with_data/: AllNodesTextWithID.jsonl  neo4jHelpers.py
backend/src/: API_DOCS.md
backend/src/api/: route.py  schemas.py
backend/src/config/: milvus_client.py  settings.py
backend/src/config/llm_clients/: openai_client.py
backend/src/config/pgadmin/: servers.json
backend/src/database/agent_state/: README.md  base.py  connection_test.py  create_tables.py  engine.py  models.py  session.py
backend/src/database/neo4j/: client.py
backend/src/memory_graph/: parser_changes.md  retriever_parser.py
backend/src/subquery_gen/: agent.py  reasoningbank_retriever.py  schemas.py
backend/src/tests/: openai_api_test.py  pg_connection_test.py  reasoningbank_retriever_test.py
backend/src/tests/memorygraph/: TEST_PLAN.md  retriever_advanced_tests.py  retriever_test.py
evaluations/data/: student_scores.csv
evaluations/idk/: prompt.txt  ui.json
frontend/: .gitignore  CLOUDFLARE_SETUP.md  index.html  package-lock.json  package.json  schema.sql  wrangler.toml
frontend/src/: App.tsx  (+1 more)
(+35 files in other folders)
